--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,54 +86,31 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
+.brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-cost {
+.cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3 {
+h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
