--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,17 +91,7 @@ h3 {
     background-color: #2589bd;
 }
 
-.lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.cost {
+.spacetext {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -112,7 +102,7 @@ h3 {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+.maincontent {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -120,40 +110,11 @@ h3 {
     background-color: #0072bb;
     color: #ffffff;
 }
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
 .maxheight {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
