--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,6 @@ header h1 {
     font-size: 48px;
 }
 
-header h1 .seo {
-    color: #d9dcd6;
-}
-
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -64,6 +60,10 @@ footer {
 
 footer h2 {
     font-size: 20px;
+}
+
+.seo {
+    color: #d9dcd6;
 }
 
 .hero {
