--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ footer h2 {
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url(../images/digital-marketing-meeting.jpg);
 }
 
 .content {
